correction d'elements dispérsé en CSS

--- a/frontend/groupomania/src/scss/_utils.scss
+++ b/frontend/groupomania/src/scss/_utils.scss
@@ -51,3 +51,15 @@ $textShadowMediumGreen:#00543f 5px 0 5px;
     box-shadow:  5px 5px 10px #006b50, 
     -5px -5px 10px #009b74;
 }
+
+@mixin buttonSize {
+    padding-top:0.5rem ;
+    font-size: 28px;
+    height: 3rem;
+    width: 3rem;
+}
+
+@mixin paddingInput {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
